Add HamburgerMenuAutomationPropertyName property to HamburgerMenu control. Issue #1329

--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -162,7 +162,7 @@
                                 Margin="0,0,0,8"
                                 Padding="0"
                                 VerticalAlignment="Top"
-                                AutomationProperties.Name="Main button"
+                                AutomationProperties.Name="{TemplateBinding HamburgerMenuAutomationPropertyName}"
                                 Background="Transparent"
                                 BorderThickness="0"
                                 TabIndex="0">
