Localize Hamburguer menu menu items automation property name

--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -282,7 +282,7 @@
                                         <ListView x:Name="ButtonsListView"
                                                   Grid.Row="2"
                                                   Width="{TemplateBinding OpenPaneLength}"
-                                                  AutomationProperties.Name="Menu items"
+                                                  AutomationProperties.Name="{TemplateBinding MenuItemsAutomationPropertyName}"
                                                   IsItemClickEnabled="True"
                                                   ItemContainerStyle="{StaticResource HambugerMenuItemStyle}"
                                                   ItemTemplate="{TemplateBinding ItemTemplate}"
