Add Expander AutomationProperty name in Expander control.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -415,7 +415,7 @@
                                 <ToggleButton x:Name="PART_ExpanderToggleButton" 
                                               Height="40"
                                               TabIndex="0"
-                                              AutomationProperties.Name="Expand"
+                                              AutomationProperties.Name="{TemplateBinding ExpanderAutomationPropertyName}"
                                               Style="{StaticResource HeaderToggleButtonStyle}" 
                                               VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
                                               Foreground="{TemplateBinding Foreground}"
