--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -136,7 +136,7 @@
                                               Grid.Row="2"
                                               Width="{TemplateBinding OpenPaneLength}"
                                               VerticalAlignment="Bottom"
-                                              AutomationProperties.Name="Option items"
+                                              AutomationProperties.Name="{TemplateBinding OptionItemsAutomationPropertyName}"
                                               IsItemClickEnabled="True"
                                               ItemContainerStyle="{StaticResource HambugerMenuItemStyle}"
                                               ItemTemplate="{TemplateBinding OptionsItemTemplate}"
