Add content AutomationProperty name in hamburguer menu control.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -152,7 +152,7 @@
                                 </Grid>
                             </SplitView.Pane>
                             <ContentPresenter x:Name="ContentPart"
-                                              AutomationProperties.Name="Content"
+                                              AutomationProperties.Name="{TemplateBinding ContentAutomationPropertyName}"
                                               Content="{TemplateBinding Content}" />
                         </SplitView>
                         <Button x:Name="HamburgerButton"
