--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -315,7 +315,7 @@
                                     </Grid>
                                 </SplitView.Pane>
                                 <ContentPresenter x:Name="ContentPart"
-                                              AutomationProperties.Name="Content"
+                                              AutomationProperties.Name="{TemplateBinding ContentAutomationPropertyName}"
                                               Content="{TemplateBinding Content}" />
                             </SplitView>
                             <Button x:Name="HamburgerButton"
