Add text content AutomationProperty name in HeaderTextBlock control.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml
@@ -38,7 +38,7 @@
                                           Visibility="Collapsed" />
 
                         <TextBlock x:Name="TextContent"
-                                   AutomationProperties.Name="Text content"
+                                   AutomationProperties.Name="{TemplateBinding TextContentAutomationPropertyName}"
                                    Style="{TemplateBinding TextStyle}"
                                    Text="{TemplateBinding Text}" />
                         <VisualStateManager.VisualStateGroups>
