--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -7,8 +7,8 @@
              xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
              xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
              xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
+             RequiresPointerMode="Auto"
              RequestedTheme="Light">
-    
     
     <Application.Resources>
 
@@ -190,6 +190,7 @@
             <Setter Property="UseSystemFocusVisuals" Value="True" />
             <Setter Property="HorizontalContentAlignment" Value="Left" />
             <Setter Property="VerticalContentAlignment" Value="Stretch" />
+            <Setter Property="UseSystemFocusVisuals" Value="False" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListViewItem">
@@ -763,7 +764,8 @@
                                             AutomationProperties.Name="Search button"
                                             Background="Transparent"
                                             BorderThickness="0"
-                                            TabIndex="1">
+                                            TabIndex="1"
+                                            UseSystemFocusVisuals="False">
                                             <FontIcon Margin="16,12"
                                                   FontFamily="Segoe MDL2 Assets"
                                                   FontSize="16"
