added analytics to landingpage

--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
@@ -11,30 +11,39 @@
       mc:Ignorable="d">
 
     <Page.Resources>
-        <DataTemplate x:DataType="sampleapp:Sample" x:Key="SampleTemplate">
-            <HyperlinkButton Width="267" HorizontalContentAlignment="Left" Style="{StaticResource AboutHyperlinkButtonStyle}" Click="HyperlinkButton_Click">
+        <DataTemplate x:DataType="sampleapp:Sample" x:Key="RecentSampleTemplate">
+            <HyperlinkButton Width="267" HorizontalContentAlignment="Left" Style="{StaticResource AboutHyperlinkButtonStyle}" Click="RecentSample_Click">
+                <TextBlock Text="{x:Bind Name}"></TextBlock>
+            </HyperlinkButton>
+        </DataTemplate>
+
+        <DataTemplate x:DataType="sampleapp:Sample" x:Key="NewSampleTemplate">
+            <HyperlinkButton Width="267" HorizontalContentAlignment="Left" Style="{StaticResource AboutHyperlinkButtonStyle}" Click="NewSample_Click">
                 <TextBlock Text="{x:Bind Name}"></TextBlock>
             </HyperlinkButton>
         </DataTemplate>
 
         <DataTemplate x:DataType="sampleapp:GitHubRelease" x:Key="ReleaseNoteTemplate">
             <HyperlinkButton HorizontalAlignment="Left"
-                                                             HorizontalContentAlignment="Stretch" 
-                                                             NavigateUri="{x:Bind Url}"
-                                                             Width="208"
-                                                             Style="{StaticResource AboutHyperlinkButtonStyle}">
+                             HorizontalContentAlignment="Stretch" 
+                             NavigateUri="{x:Bind Url}"
+                             Width="208"
+                             Click="ReleaseNotes_Click"
+                             Style="{StaticResource AboutHyperlinkButtonStyle}">
                 <Grid>
                     <TextBlock Text="{x:Bind FullName}"></TextBlock>
                     <TextBlock HorizontalAlignment="Right"
-                                                               Opacity="0.5"
-                                                               Foreground="Black"
-                                                               Text="{x:Bind Published.ToString('MMM d', {x:Null})}"></TextBlock>
+                               Opacity="0.5"
+                               Foreground="Black"
+                               Text="{x:Bind Published.ToString('MMM d', {x:Null})}"></TextBlock>
                 </Grid>
             </HyperlinkButton>
         </DataTemplate>
 
         <DataTemplate x:DataType="sampleapp:LandingPageLink" x:Key="LinkTemplate">
-            <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="{x:Bind Url}">
+            <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" 
+                             NavigateUri="{x:Bind Url}"
+                             Click="Link_Clicked">
                 <TextBlock Text="{x:Bind Title}"></TextBlock>
             </HyperlinkButton>
         </DataTemplate>
@@ -122,7 +131,7 @@
                                     <ItemsControl x:Name="RecentSamplesItemsControl"
                                               MinHeight="130"
                                               ItemsPanel="{StaticResource ItemsWrapGridHorizontalTemplate}"
-                                              ItemsSource="{x:Bind RecentSamples, Mode=OneWay}" ItemTemplate="{StaticResource SampleTemplate}">
+                                              ItemsSource="{x:Bind RecentSamples, Mode=OneWay}" ItemTemplate="{StaticResource RecentSampleTemplate}">
                                     </ItemsControl>
                                 </Grid>
 
@@ -134,7 +143,7 @@
 
                             <StackPanel x:Name="WhatNewPanel" Margin="0,0,0,48">
                                 <TextBlock FontSize="20" FontFamily="Segoe UI" FontWeight="Normal" Text="{x:Bind LandingPageLinks.NewSectionTitle, Mode=OneWay}"></TextBlock>
-                                <ItemsControl x:Name="WhatNewItemsControl" Margin="0,16,0,0" ItemsSource="{x:Bind NewSamples, Mode=OneWay}" ItemTemplate="{StaticResource SampleTemplate}"></ItemsControl>
+                                <ItemsControl x:Name="WhatNewItemsControl" Margin="0,16,0,0" ItemsSource="{x:Bind NewSamples, Mode=OneWay}" ItemTemplate="{StaticResource NewSampleTemplate}"></ItemsControl>
                             </StackPanel>
 
                             <StackPanel x:Name="ReleaseNotesPanel">
@@ -150,13 +159,13 @@
                                 <TextBlock FontSize="20" FontFamily="Segoe UI" FontWeight="Normal">About the App</TextBlock>
                                 <ItemsControl Margin="0,16,0,0">
                                     <TextBlock x:Name="Version" FontSize="12" Margin="0,0,0,10"></TextBlock>
-                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="http://www.newtonsoft.com/json">
+                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="http://www.newtonsoft.com/json" Click="Link_Clicked">
                                         <TextBlock>Newtonsoft Json (Dependency)</TextBlock>
                                     </HyperlinkButton>
-                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://github.com/google/code-prettify">
+                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://github.com/google/code-prettify" Click="Link_Clicked">
                                         <TextBlock>Code Prettify (Dependency)</TextBlock>
                                     </HyperlinkButton>
-                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://unsplash.com/photos/xghkLM1p1zA">
+                                    <HyperlinkButton Style="{StaticResource AboutHyperlinkButtonStyle}" NavigateUri="https://unsplash.com/photos/xghkLM1p1zA" Click="Link_Clicked">
                                         <TextBlock>Background photo by Ron Manke</TextBlock>
                                     </HyperlinkButton>
                                 </ItemsControl>
