Sample App Mobile UX Improvements.

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -252,6 +252,7 @@
                                    Margin="12,6"
                                    HorizontalAlignment="Left"
                                    VerticalAlignment="Center"
+                                   Tapped="PivotTitle_Tapped"
                                    Foreground="{StaticResource Brush-Grey-01}"
                                    Text="" />
                         <HyperlinkButton x:Name="GitHub"
